CHANGES

Trunk
	Output error when translating entire compound document (without extracting or specifying nested unit).

	Fix misidentification of call as macro with starting '&' operator.

	Put in full handling of Java interfaces.

	Fix regression error for Java packages.

	Output source encoding in src2srcml when in verbose mode.

	Write verbose output to standard error.

	Make sure that C++ is specified as the language for C++ (instead of CPP).

	Document hidden srcml2src option for nested unit count in help.

	Fix function pointer declarations with no '*'.

	Allow for comment character of '#' in file list.

	Allow for blank lines in file list.

	Input file option is made a default nested output.

	Added whether libxml2 enabled to version.

	Form feeds are now stored using a new empty XML element.

	Default xml encoding for srcml2src unit extraction is that of the root unit.

	Allow for libxml and non-libxml builds of src2srcml.  Currently, srcml2src is only available with a
	libxml build.

	Get default text encoding from locale.

	Handle non-existing input files correctly.

	Allow for combined short options in src2srcml.

	Fixed then after condition problem with while nested in if.

	Add option to srcml2src to get encoding.

	Remove append handling.  New options make it unnecessary.

	New attribute, version.

	Validate encodings in src2srcml before further processing.

	Added ability to use embedded values in parameters.

	Added verbose flag (changing version flag).

	Changed srcml2src to use libxml2.

	Improve command line options for srcml2src and make the handling more consistent between the programs.

	Changed src2srcml to use libxml2.

	Converted boolean parameters to one option parameter.

	Added gzip compression option to output of src2srcml.

	Move output options out of srcMLOutput.

	Move selection of options to main program.

	Cleanup of file handling in src2srcml program.

	Changed standalone attribute in xml declaration to "yes".
